lesson_40_ingress_oauth/01_animals_pod.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bear-deployment
  namespace: animals
spec:
  selector:
    matchLabels:
      app: bear
  replicas: 1
  template:
    metadata:
      labels:
        app: bear
    spec:
      containers:
        - name: bear
          image: supergiantkir/animals:bear
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moose-deployment
  namespace: animals
spec:
  selector:
    matchLabels:
      app: moose
  replicas: 1
  template:
    metadata:
      labels:
        app: moose
    spec:
      containers:
        - name: moose
          image: supergiantkir/animals:moose
          ports:
            - containerPort: 80
