lesson_40_ingress_oauth/02_animals_service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: bear-svc
  namespace: animals
spec:
  selector:
    app: bear
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: moose-svc
  namespace: animals
spec:
  selector:
    app: moose
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
