lesson_40_ingress_oauth/04_ingress_oauth.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # We strip the prefix before it passes to our backend or our app wont load as it will get route /bears instead /
  name: external-auth-oauth2
  namespace: animals
spec:
  ingressClassName: nginx
  rules:
    # change the IP below based on the DNS resolution of your LB (under kubectl get svc -n ingress-nginx)
    - host: 54.216.243.124.nip.io
      http:
        paths:
          - path: /moose(|$)(.*)
            pathType: Exact
            backend:
              service:
                name: moose-svc
                port:
                  number: 80
  tls:
    - hosts:
        - 54.216.243.124.nip.io
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: animals
spec:
  ingressClassName: nginx
  rules:
    - host: 54.216.243.124.nip.io
      http:
        paths:
          - backend:
              service:
                name: oauth2-proxy
                port:
                  number: 4180
            path: /oauth2
            pathType: Prefix
  tls:
    - hosts:
        - 54.216.243.124.nip.io
